<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriActivity">

    <TextView
        android:id="@+id/dataUser"
        android:layout_width="370dp"
        android:layout_height="227dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/buttonAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/buttonAccueil"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/buttonRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/buttonDeco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/d_connexion"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/nomUser"
        android:layout_width="309dp"
        android:layout_height="59dp"
        android:layout_below="@id/dataUser"
        android:text="" />

</RelativeLayout>