<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListProfActivity"

    android:orientation="vertical">
    <TextView
        android:id="@+id/idTvSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Liste des Comptes-rendus :"
        android:layout_centerHorizontal="true"
       />
    <ListView
        android:id="@+id/idLvisite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    </ListView>
    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    <TextView
        android:id="@+id/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@id/prenom"/>

    <Button
        android:id="@+id/buttonAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/buttonAccueil"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/buttonRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/buttonDeco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/d_connexion"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>